src/components/dashboard/styles.css
@import '../app/variables';

.wrapper {
  width: 100%;

  & h2 {
    margin: 40px 32px 20px;
    font-size: 28px;
  }
}

.seeAllLink {
  font-size: 16px;
  color: var(--color-primary-standard);
  margin-left: 40px;
  text-decoration: none;
  font-family: var(--content-font);
  font-weight: 400;
}

.send {
  position: relative;
}

.graph {
  height: calc(70% - 20px);
  margin-bottom: 20px;
}

.latestActivity {
  height: 30%;
}

@media (--medium-viewport) {
  .sendWrapper {
    display: none;
  }

  .graph {
    height: 30%;
    min-height: auto;
    margin-bottom: 0;
  }

  .latestActivity {
    height: auto;
  }
}

